...
            confirmButton = {
                TextButton(
                    onClick = {
                        showLogoutDialog = false
                        viewModel.logout()
                    },
                    modifier = Modifier.testTag("logout_confirm_button"),
                ) {
                    Text(text = stringResource(id = R.string.dialog_confirm), color = MenaColors.Error)
                }
            },
            dismissButton = {
                TextButton(
                    onClick = { showLogoutDialog = false },
                    modifier = Modifier.testTag("logout_cancel_button"),
                ) {
                    Text(text = stringResource(id = R.string.dialog_cancel), color = MenaColors.OnBackgroundSecondary)
                }
            },
        )
    }
...
